fix avatar uploader middle align, profile-details nz-page-header background

--- a/src/app/modules/profile/profile-detail/profile-detail.component.scss
+++ b/src/app/modules/profile/profile-detail/profile-detail.component.scss
@@ -2,6 +2,7 @@
 
 nz-page-header {
   border: 1px solid rgb(235, 237, 240);
+  background: $white-color;
 }
 
 .profile-links {
