--- a/src/app/modules/shared/profile-avatar-uploader/profile-avatar-uploader.component.scss
+++ b/src/app/modules/shared/profile-avatar-uploader/profile-avatar-uploader.component.scss
@@ -1,4 +1,5 @@
 .avatar-uploader {
+  display: flex;
   .avatar {
     width: 100px;
     height: 100px;
